Hover on mobile version fix

--- a/style/my.css
+++ b/style/my.css
@@ -55,3 +55,13 @@
     border: none;
 
 }
+
+@media (max-device-width: 768px) {
+    .card_img:hover{
+        position: relative;
+        z-index: 1;
+        transform: none;
+    }
+
+
+}
